respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Warehouse_Storage_Bin__c.object
<CustomObject>
    <fields>
        <fullName>ABC_Classification__c</fullName>
        <label>ABC Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Warehouse Storage Bins</relationshipLabel>
        <relationshipName>Warehouse_Storage_Bins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Methods__c</fullName>
        <label>Inventory Methods</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FIFO</fullName>
                </value>
                <value>
                    <fullName>LIFO</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_Z__c</fullName>
        <label>Level (Z)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10 - High</fullName>
                </value>
                <value>
                    <fullName>20 - Medium</fullName>
                </value>
                <value>
                    <fullName>30 - Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Row_X__c</fullName>
        <label>Row (X)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Y__c</fullName>
        <label>Stack (Y)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subfamily__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subfamily</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Family__c</field>
                <operation>equals</operation>
                <valueField>Subfamily__c.Product_Family__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Subfamily__c</referenceTo>
        <relationshipLabel>Warehouse Storage Bins</relationshipLabel>
        <relationshipName>Warehouse_Storage_Bins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pallet Locations</fullName>
                </value>
                <value>
                    <fullName>Large Picking Locations</fullName>
                </value>
                <value>
                    <fullName>Small Picking Locations</fullName>
                </value>
                <value>
                    <fullName>Overspill areas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <label>Warehouse</label>
        <referenceTo>Warehouse__c</referenceTo>
        <relationshipLabel>Warehouse Storage Bins</relationshipLabel>
        <relationshipName>Warehouse_Storage_Bins</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Warehouse Storage Bin</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Warehouse__c</columns>
        <columns>ABC_Classification__c</columns>
        <columns>Family__c</columns>
        <columns>Subfamily__c</columns>
        <columns>Priority__c</columns>
        <columns>Row_X__c</columns>
        <columns>Stack_Y__c</columns>
        <columns>Level_Z__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Warehouse Storage Bin Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouse Storage Bins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>